# CS_lab_project

./: .gitignore  CMakeLists.txt  Server.cpp
include/: ChatController.h  ChatGUI.h  INetworkClient.h  INetworkServer.h  RealNetworkClient.h  ServerController.h
src/: ChatController.cpp  ChatGUI.cpp  RealNetworkClient.cpp  ServerController.cpp  main.cpp
tests/: ChatControllerTest.cpp  ServerControllerTest.cpp
