cmake_minimum_required(VERSION 3.14)
project(CS_lab_project)

# use c++ 17
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# let cmake handle qt's special macros automatically
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

# find the qt libraries
find_package(Qt6 COMPONENTS Core Gui Widgets Network REQUIRED)

# tell cmake where to look for our header files
include_directories(include)

# ---------------------------------------------------------
# build 1: the main application
# ---------------------------------------------------------
add_executable(ChatApp 
    src/main.cpp 
    src/ChatGUI.cpp 
    src/ChatController.cpp
    src/RealNetworkClient.cpp   
    include/ChatGUI.h
    include/ChatController.h
    include/RealNetworkClient.h 
)
target_link_libraries(ChatApp PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Network)

# ---------------------------------------------------------
# build 2: the unit tests
# ---------------------------------------------------------
enable_testing()

# tell cmake to automatically download googletest from github
include(FetchContent)
FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG release-1.12.1
)
# this line prevents a common windows c++ error
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) 
FetchContent_MakeAvailable(googletest)

add_executable(ChatTests 
    tests/ChatControllerTest.cpp 
    src/ChatGUI.cpp 
    src/ChatController.cpp
    include/ChatGUI.h
    include/ChatController.h
)
target_link_libraries(ChatTests PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Network gtest gtest_main)


## Generated by Gemini